# fast-i18n-scan

./: .gitignore  .npmignore  Cargo.toml  MIGRATION.md  README.md  index.d.ts  index.js  package.json  test_directory_output.sh
.cargo/: config.toml
__test__/: README.md
__test__/fixtures/: demo_test.jsx
__test__/fixtures/test_vite_app/src/: main.ts
__test__/integration/: mod.rs
demo/i18n/: .gitignore  index.d.ts  index.js  package.json
demo/i18n/resource/: lng.js.tpl
demo/i18n/scan/: config.js  has-untranslated.js  hash-key.js  index.js  lngs.js  nodes-to-string.js  parse-func-from-string-by-babel.js  parse-trans-from-string-by-babel.js  scanner.js  writer.js  zh-linter.js
demo/i18n/scan/slp/: slp.d.ts  slp.js
demo/i18n/utils/: removeI18nKey.js
examples/: basic_usage.rs  sample.tsx
scripts/: README.md  build.sh  clean.sh  demo.sh  dev.sh  prepare-binary.js  publish.sh  setup.sh  test.sh  validate.sh
src/: lib.rs
src/scan/: config.rs  hash_key.rs  js_config.rs  mod.rs  nodes_to_string.rs  parse_func_from_string_by_babel.rs  zh_linter.rs
src/scan/slp/: mod.rs  slp.rs
src/utils/: mod.rs  remove_i18n_key.rs
test_vite_app/src/: App.jsx
tests/: integration_test.rs
