[package]
name = "fast-i18n-scan"
version = "0.2.5"
edition = "2021"
description = "Fast i18n scanning tool for JavaScript/TypeScript projects"
license = "MIT"
repository = "https://github.com/your-username/fast-i18n-scan"
keywords = ["i18n", "internationalization", "scanning", "javascript", "typescript"]
categories = ["development-tools", "localization"]

[lib]
name = "fast_i18n_scan"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "fast-i18n-scan"
path = "src/bin/main.rs"
required-features = ["cli"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
colored = "2.0"
lazy_static = "1.4"

# NAPI dependencies
napi = { version = "2.0", features = ["serde-json"], optional = true }
napi-derive = { version = "2.0", optional = true }

# CLI dependencies
clap = { version = "4.0", features = ["derive"], optional = true }
glob = { version = "0.3", optional = true }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[build-dependencies]
napi-build = "2.0"

[dev-dependencies]
tempfile = "3.8"

[features]
default = []
napi = ["dep:napi", "dep:napi-derive"]
cli = ["clap", "glob"]